@@ -32,3 +32,8 @@ INCLUDES	=	-I$(top_srcdir)/include
 include_HEADERS =       common.h
 EXTRA_DIST	=	t0016.in t0017.in data.bin
 
+all-redirect:
+	if test ! -f t0016.in; then cp $(srcdir)/t0016.in t0016.in; fi
+	if test ! -f t0017.in; then cp $(srcdir)/t0017.in t0017.in; fi
+	if test ! -f data.bin; then cp $(srcdir)/data.bin data.bin;  fi
+
