@@ -1,3 +1,8 @@
+Mon Sep  2 15:25:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* Makefile.am src/dblib/unittests/Makefile.am:
+	- fixed distcheck copying needed file if they not exists in 
+	  destination directory
+
 Sun Sep  1 19:56:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
 	* .cvsignore:
 	- ignore generated file ltcf-c.sh
